test/errors/structure_types_error/zs/implicit_non_array_field_error.zs
package implicit_non_array_field_error;

struct Item
{
    // Implicit can be arrays only.
    implicit int32  param1;
};
